Routes Changelog
%%%%%%%%%%%%%%%%

Release 1.12 (**tip**)
======================
* Fix url.current() not returning current args when explicit is True.
* Added explicit way to directly use the Mapper to match with environ.
* Fix bug with improper len placement for submapper.
* Adding regular expression builder for entire regexp for faster rejection
  in a single regexp match should none of the routes match.
* Give Mapper a tabular string representation.
* Make SubMapper objects nestable and add route-generation helpers.
* Add SubMapper-based collections.
* Make the deprecated Mapper.minimization False (disabled) by default.
* Make the mapper explicit (true) by default.

Release 1.11 (September 28, 2009)
=================================
* Extensive documentation rewrite.
* Added Mapper.extend function that allows one to add lists of Routes objects
  to the mapper in one batch, optionally with a path_prefix.
* Added Mapper.submapper function that returns a SubMapper object to enable
  easier declaration of routes that have multiple keyword argument options
  in common.
* Mapper controller_scan argument now handles None, and lists of controller
  names in addition to a callable.
* Route object now takes a name parameter, which is the name it responds to.
  This name is automatically added when called by using Mapper's connect
  class method.
* Added optional LRU object for use with Routes when URL's change too often
  for the Routes urlcache dict to be a viable option.

Release 1.10.3 (February 8, 2009)
=================================
* Tweak to use WebOb Request rather than Paste.
* Performance tweaks for URL recognition.
* Bugfix for routes.middleware not re.escaping the path_info before moving it
  to the script name.

Release 1.10.2 (January 11, 2009)
=================================
* Bugfix for unicode encoding problems with non-minimized Route generation.
  Spotted by Wichert Akkerman.
* Bugfix for when environ is {} in unit tests.
